# stt-transcripts-search

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  config.py  database.py  log_config.py  main.py  pyproject.toml  ruff.toml
backend/routes/: health.py  transcriptions.py  websocket.py
backend/tests/: test_api.py  test_routes - integration tests.py  test_unit.py
backend/utils/: db_operations.py  search.py  transcriber.py  websocket_manager.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  eslint.config.js  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/components/: FileUpload.jsx  FileUpload.test.jsx  HealthStatus.jsx  HealthStatus.test.jsx  Notification.jsx  Notification.test.jsx  TranscriptionList.jsx  TranscriptionList.test.jsx  TranscriptionSearch.jsx
tests/backend/: test_api.py
